--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,16 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+.DS_Store
+*/.DS_Store
+*.logs
+*.pot
+*.xml
+*.pyc
+*/__pycache__/
+*/__pycache__/*.pyc
+*/migrations/00*.py
+*/migrations/__pycache__/*.py
+.idea/
+venv/
